objects/OrderMilestones__c/OrderMilestones__c.object-meta.xml
<CustomObject>
    <label>Order Milestones</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>