objects/OrderMilestones__c/fields/MilestoneDatetime__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDatetime__c</fullName>
    <description>Date/time related to the Order Milestone.</description>
    <label>Milestone Datetime</label>
    <type>DateTime</type>
</CustomField>