objects/OrderMilestones__c/fields/MilestoneDescription__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDescription__c</fullName>
    <description>Captures the description of the Order Milestone</description>
    <label>Milestone Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>