objects/OrderMilestones__c/fields/MilestoneDetail__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDetail__c</fullName>
    <description>Captures Detail of the Order Milestone</description>
    <label>Milestone Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>