objects/OrderMilestones__c/fields/MilestoneSource__c.field-meta.xml
<CustomField>
    <fullName>MilestoneSource__c</fullName>
    <description>Captures the End System&apos;s Source on the Order Milestone</description>
    <label>Milestone Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>