objects/OrderMilestones__c/fields/MilestoneTransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>MilestoneTransactionDateTime__c</fullName>
    <description>Field to track the transaction Date/time related to the Order Milestone.</description>
    <label>Milestone Transaction Datetime</label>
    <type>DateTime</type>
</CustomField>