objects/OrderMilestones__c/fields/MilestoneType__c.field-meta.xml
<CustomField>
    <fullName>MilestoneType__c</fullName>
    <description>Type of Order Milestone.</description>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>COI-COC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>