objects/OrderMilestones__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order related to the milestone.</description>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Milestones</relationshipLabel>
    <relationshipName>OrderMilestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>